--- a/Report.tex
+++ b/Report.tex
@@ -16,7 +16,7 @@ This is a collage of different levels of a T1 Structural MRI
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.22]{collage}
+\includegraphics[scale=0.22]{collage.png}
 \caption{Collage of different layers of MRI}
 \label{fig:collage}
 \end{figure}
@@ -25,7 +25,7 @@ This is a "carpet" to condense and represent a high density 4D nifti file
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=0.6]{carpet}
+\includegraphics[scale=0.6]{carpet.png}
 \caption{Carpet of 4D MRI}
 \label{fig:carpet}
 \end{figure}
