--- a/Report.tex
+++ b/Report.tex
@@ -10,7 +10,13 @@
 \date{July 30, 2020}
 \maketitle
 
-I'm cheating a bit here buy not sourcing my example data from the internet.  Nifti files are big, and I have to send to the moon and back to get it (satellite internet).
+There might come a time in the future where you may find yourself with a file 
+that is a scan of your brain.  It's a Nifti file, and you may think 
+\textit{\textbf{"Hey, wouldn't it be nifti if I could see my brain?".}}  Well, it would!  But then 
+you start to wonder how that 
+could be possible, and whether Microsoft Paint can read that file format.  You 
+discover that it can't.  Now we have a solution.  Here is a tool that will take 
+your brain and collapse it into a single PDF for your viewing pleasure.
 
 This is a collage of different levels of a T1 Structural MRI
 
